@@ -38,6 +38,7 @@
 #define COFF_FLAGS 1
 
 #define TC_START_LABEL(ch, ptr)  (ch == ':' && start_label(ptr))
-
+#define TC_COFF_SIZEMACHDEP(frag) tc_coff_sizemachdep(frag)
 
 /* end of tc-h8500.h */
+
